# goocanvasmm

./: .gitignore  AUTHORS  ChangeLog  ChangeLog.pre-1-90-9  Makefile.am  NEWS  autogen.sh  configure.ac  configure.in  goocanvasmm.doap
build_shared/: Makefile_build.am_fragment
codegen/: Makefile.am
codegen/extradefs/: generate_extra_defs_goocanvas.cc
codegen/m4/: convert_libgoocanvasmm.m4
doc/: Makefile.am
doc/reference/: .gitignore  Doxyfile.in
examples/: Makefile.am  Makefile.am_fragment
examples/coordinates/: window.cc  window.h
examples/custom_item/: Makefile.am  exampleitem.cc  exampleitem.h  examplewindow.cc  examplewindow.h  main.cc
examples/demo/: main.cc  primitives.cc  primitives.h  window.cc  window.h
examples/drag_to_canvas/: examplewindow.cc  examplewindow.h  main.cc
examples/moving_shapes/: main.cc  window.cc  window.h
examples/simple/: examplewindow.cc  examplewindow.h  main.cc  window.cc
examples/table/: examplewindow.cc  examplewindow.h  main.cc
examples/tablemodel/: Makefile.am  examplewindow.cc  examplewindow.h  main.cc
examples/text/: main.cc  window.cc  window.h
goocanvas/: goocanvasmm-1.0.pc.in  goocanvasmm.h
goocanvas/goocanvasmm/: .gitignore  Makefile.am  init.cc  init.h
goocanvas/src/: Makefile.am  Makefile_list_of_hg.am_fragment  bounds.hg  canvas.ccg  canvas.hg  ellipse.hg  ellipsemodel.hg  enums.ccg  enums.hg  grid.ccg  grid.hg  gridmodel.ccg  gridmodel.hg  group.hg  image.hg  imagemodel.hg  item.ccg  item.hg  itemmodel.ccg  itemmodel.hg  itemmodelsimple.hg  itemsimple.hg  libgoocanvas_docs.xml  libgoocanvas_enums.defs  libgoocanvas_methods.defs  libgoocanvas_signals.defs  libgoocanvas_signals.defs.patch  libgoocanvas_vfuncs.defs  linedash.hg  path.hg  points.ccg  polyline.ccg  polyline.hg  polylinemodel.ccg  rect.hg  rectmodel.hg  style.ccg  style.hg  table.ccg  table.hg  (+7 more)
libgnomecanvas/: libgnomecanvasmm.h
libgnomecanvas/libgnomecanvasmm/: affinetrans.cc  affinetrans.h  point.h  properties.cc  properties.h
patches/: 2006-09-28_murrayc.patch  goocanvas-0.4_StyleValuesType.patch  goocanvas-0.4_glib-mkenums.patch
scripts/: config.guess  config.sub
tests/: Makefile.am
tests/child_properties/: Makefile.am  main.cc
tools/extra_defs_gen/: generate_defs_goocanvas.cc  generate_defs_libgnomecanvas.cc
tools/m4/: Makefile.am  convert.m4  convert_libgoocanvasmm.m4
